# clamav-client

./: .gitignore  Cargo.toml
.github/workflows/: push.yml
src/: lib.rs
tests/: clamav_client.rs
